--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <connection>scm:git:https://github.com/wso2/wso2-webharvest.git</connection>
         <developerConnection>scm:git:https://github.com/wso2/wso2-webharvest.git</developerConnection>
         <url>https://github.com/wso2/wso2-webharvest.git</url>
-        <tag>v2.0-wso2v2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <repositories>
