--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,22 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# ignore Intellij-IDEA files
+*.iml
+*.ipr
+*.iws
+*.classpath
+*.settings
+*.project
+*.idea
+.DS_Store
+
+# ignore logs
+*.log
+
+# ignore target directories
+target/
+
+## various other file types we don't want to have in the repository:
+.DS_Store
